<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   tools:context=".fragment.MainFragment">

    <androidx.drawerlayout.widget.DrawerLayout android:layout_width="match_parent"
                                               android:layout_height="match_parent"
                                               tools:layout_editor_absoluteX="-3dp" android:id="@+id/drawer">

        <!-- content -->
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="match_parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:id="@+id/tvCounter" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintVertical_bias="0.04000002"
                    android:textSize="24sp" android:textStyle="bold" android:textColor="@android:color/black"/>
            <androidx.appcompat.widget.Toolbar
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    android:theme="?attr/actionBarTheme"
                    android:minHeight="?attr/actionBarSize"
                    android:id="@+id/toolbar"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                    android:text="COUNTER"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.214"
                    android:textStyle="bold" android:textColor="@android:color/black" android:textSize="24sp"/>
            <Button
                    android:text="Add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnAdd" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
                    android:layout_marginBottom="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            <Button
                    android:text="Reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnReset" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>
            <Button
                    android:text="Settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSettings" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <!-- drawer -->
        <include layout="@layout/drawer"/>
    </androidx.drawerlayout.widget.DrawerLayout>
</androidx.constraintlayout.widget.ConstraintLayout>